# aserh

./: .gitignore  CMakeLists.txt  README.md  format-files.sh
.github/workflows/: main.yml
src/: main.cpp  markov.cpp  markov.h
tests/: main.cpp  test_markov.cpp
